Update estilos nena

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="field">
             <label for="episodeTitle">
-                <h4>Escribe un título para tu episodio:</h4>
+                <h4>Escribe un título para tu Episodio:</h4>
             </label>
             <input type="text" id="episodeTitle" name="episodeTitle" minlength="4" maxlength="50" size="10"
                 oninput="setEpisodeName(this.value)" class="input titleInput">
