--- a/index.html
+++ b/index.html
@@ -13,101 +13,99 @@
     <div id="sidebar1" class="sidebar sidebar1" onclick="toggleNav('side1')">
         <p id="icon1">✸ EquipoMotor</p>
         <p id="sidebar1Text">
-            La primera edición de <a href="https://www.museoreinasofia.es/actividades/equipomotor">equipoMotor</a> tuvo
-            lugar entre
-            marzo y junio del año 2022.
+            <span id="sideBarTitle">✸ EquipoMotor</span>
             <br /> <br />
-            equipoMotor TXT convocó a las personas que formaron parte de algunas de las Comunidades del Museo Reina
-            Sofía
-            entre los años 2019 y 2022 para recorrer Vasos Comunicantes, la exposición de la Colección Permanente
-            del
-            museo.
+            La primera edición de <a href="https://www.museoreinasofia.es/actividades/equipomotor">equipoMotor</a>,
+            equipoMotor.TXT, tuvo
+            lugar entre
+            marzo y junio del año 2022, coordinada por Desmusea y acompañada por Torta Colectivo, Yuri Tuma y Fabiana
+            Vinagre, Sara Martín Terceño, Fran MM Cabeza de Vaca y Laura Ramírez Ashbaugh.
+            <br /> <br />
+            equipoMotor.TXT convocó a las personas que formaron parte de algunas de las Comunidades del Museo Reina
+            Sofía entre los años 2019 y 2022 para recorrer <i> Vasos Comunicantes</i>, la reordenación de la Colección
+            Permanente del museo que se presentó en noviembre de 2021.
             <br />
             <br />
-            Inspiradas por la obra TXT de Ana Torfs, viajamos a través de la Colección para conocerla y preguntarnos:
-            ¿qué ideas o conceptos conectan los diferentes episodios? ¿Cómo circulan las palabras a través de las obras
-            y los espacios?
-
+            Inspiradas por la obra <i>TXT</i> de Ana Torfs, viajamos a través de la Colección Permanente para conocerla
+            y preguntarnos: ¿qué ideas o conceptos conectan los diferentes episodios? ¿Cómo circulan las palabras a
+            través de las obras y los espacios?
             <br />
             <br />
             El programa se articuló a través de 8 sesiones presenciales y la creación de otros tantos boletines
-            digitales,
-            un material de mediación comunitaria que configura un glosario compartido de lectura colectiva.
-
+            digitales, un material de mediación comunitaria que construye un glosario compartido de lectura colectiva.
             <br />
             Puedes leer los boletines que funcionan como bitácora y relatoría de las sesiones.
             <br /> <br />
         <nav id="links">
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin1"> Boletín 1 </a><br />
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin2">Boletín 2 </a><br />
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin3"> Boletín 3 </a><br />
-            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4"> Boletín 4 </a><br />
-            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5"> Boletín 5 </a><br />
-            <a href="https://go.museoreinasofia.es/boletin6"> Boletín 6 </a><br />
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin7"> Boletín 7 </a><br />
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin8"> Boletín 8 </a><br />
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin9"> Boletín 9 </a><br />
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin1"> equipoMOTOR.TXT #1. ¡ven al primer encuentro!
+            </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin2">equipoMOTOR.TXT #2. el equipoMOTOR de las
+                palabras errantes </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin3"> equipoMOTOR.TXT #3. la Casa y el Reina: doble
+                exposición </a>
+            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4"> equipoMOTOR.TXT #4. ciudad, hojas de sala,
+                revistas</a>
+            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5"> equipoMOTOR.TXT #5. impulso y serenidad
+            </a>
+            <a href="https://go.museoreinasofia.es/boletin6"> equipoMOTOR.TXT #6. ¿qué animal serías? </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin7"> equipoMOTOR.TXT #7. escribo tu nombre
+            </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin8">equipoMOTOR.TXT #8. la bandera de equipoMotor
+            </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin9"> equipoMOTOR.TXT #9. el tornaviaje </a>
         </nav>
         </p>
     </div>
     <div id="sidebar2" class="sidebar sidebar2" onclick="toggleNav('side2')">
         <p id="icon2">✸ Máquina de ficción</p>
         <p id="sidebar2Text">
-            Esta web se presenta como resultado del trabajo realizado por equipoMotor durante su primera edición,
-            inspirada por la obra TXT de Ana Torfs.
+            <span id="sideBarTitle">✸ Máquina de ficción</span>
             <br>
             <br>
-            TXT se compone de seis tapices donde se representan unas extrañas máquinas de ficción imaginadas por
-            Jonathan Swift en su obra Los Viajes de Gulliver.
-            <br>
-            Cada máquina está acompañada de una palabra: jengibre,
-            azafrán, azúcar, café, tabaco y chocolate. Estas palabras son un tipo especial de préstamo lingüístico
-            presente en varios idiomas y cuyo origen resulta difícil de determinar.
-            <br>
-
-            Cada tapiz muestra imágenes que relatan los viajes posibles de estos términos a través del mundo.
+            Esta máquina de ficción se presenta como resultado del trabajo realizado por equipoMotor.TXT durante su
+            primera edición, inspirada por la obra <i>TXT</i> de Ana Torfs.
             <br>
             <br>
-            Partiendo de distintos ejercicios de mediación por las salas del museo, equipoMotor dilucidó aquellos
-            conceptos que funcionan como vínculos constantes entre los episodios de Vasos Comunicantes. Conceptos que
-            atraviesan las salas, reinterpretados o transformados en cada uno de los diferentes contextos políticos,
-            artísticos y sociales que circunscriben sus piezas.
+            <i>TXT</i> se compone de seis tapices que contienen unas extrañas máquinas de ficción inspiradas por <i>Los
+                Viajes de Gulliver</i> de Jonathan Swift.
+            <br>
+            Cada máquina está acompañada de una palabra: jengibre, azafrán, azúcar, café, tabaco y chocolate; palabras
+            que suponen un tipo especial de préstamo lingüístico presente en varios idiomas y cuyo origen resulta
+            difícil de determinar.
+            <br>
+            Cada tapiz muestra una serie de imágenes que relatan los viajes posibles de estas palabras a través del
+            mundo.
             <br>
             <br>
-            A través de las palabras extraídas de la experiencia, se presenta aquí la máquina de ficción de Vasos
-            Comunicantes. Tras seleccionar algunas palabras, la máquina generará un itinerario por el museo conectando
-            obras, conceptos y experiencias reales y ficcionadas extraídas de la edición de equipoMotor.
+            Partiendo de distintos ejercicios de mediación por los espacios del museo, equipoMotor.TXT decidió una serie
+            de términos que funcionan como vínculos constantes entre los Episodios de <i>Vasos Comunicantes</i>.
+            Términos que
+            atraviesan las salas, y cuyo significado se transforma o reinterpreta en cada uno de los diferentes
+            contextos políticos, artísticos y sociales que circunscriben sus piezas.
+            <br>
+            <br>
+            Tales palabras son las que activan el mecanismo de esta máquina de ficción de <i>Vasos Comunicantes</i>, que
+            genera
+            un Episodio en torno al museo conectando obras, conceptos y experiencias reales y ficcionadas extraídas de
+            equipoMotor.TXT.
             <br />
     </div>
 
     <div id="sidebar3" class="sidebar sidebar3" onclick="toggleNav('side3')">
         <p id="icon3">✸ Episodios</p>
         <p id="sidebar3Text">
-            Esta web se presenta como resultado del trabajo realizado por equipoMotor durante su primera edición,
-            inspirada por la obra TXT de Ana Torfs.
-            <br>
-            <br>
-            TXT se compone de seis tapices donde se representan unas extrañas máquinas de ficción imaginadas por
-            Jonathan Swift en su obra Los Viajes de Gulliver.
-            <br>
-            Cada máquina está acompañada de una palabra: jengibre,
-            azafrán, azúcar, café, tabaco y chocolate. Estas palabras son un tipo especial de préstamo lingüístico
-            presente en varios idiomas y cuyo origen resulta difícil de determinar.
-            <br>
-
-            Cada tapiz muestra imágenes que relatan los viajes posibles de estos términos a través del mundo.
-            <br>
-            <br>
-            Partiendo de distintos ejercicios de mediación por las salas del museo, equipoMotor dilucidó aquellos
-            conceptos que funcionan como vínculos constantes entre los episodios de Vasos Comunicantes. Conceptos que
-            atraviesan las salas, reinterpretados o transformados en cada uno de los diferentes contextos políticos,
-            artísticos y sociales que circunscriben sus piezas.
-            <br>
-            <br>
-            A través de las palabras extraídas de la experiencia, se presenta aquí la máquina de ficción de Vasos
-            Comunicantes. Tras seleccionar algunas palabras, la máquina generará un itinerario por el museo conectando
-            obras, conceptos y experiencias reales y ficcionadas extraídas de la edición de equipoMotor.
-            <br />
+            <span id="sideBarTitle">✸ Episodios</span>
+            <br><br>
+            Vasos Comunicantes está compuesto de ocho Episodios. Cada uno de ellos presenta una historia, un relato
+            posible entre todas los relatos a narrar a través del arte producido desde el año 1881 hasta
+            nuestros días.
+            <br><br>
+            Esta máquina funciona como herramienta de continuidad de este ejercicio de narrar. A través de su mecanismo,
+            cualquiera puede participar de la narrativa de Vasos Comunicantes, añadiendo un Episodio propio que lo
+            enriquezca
+            y aporte nuevos matices, añadiendo una nueva posibilidad de entender y hacer propia la historia del Reina
+            Sofía.
+            <br><br>
     </div>
     <main id="main">
         <!-- <article>
