--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     </div>
 
     <div id="sidebar3" class="sidebar sidebar3" onclick="toggleNav('side3')">
-        <p id="icon3">✸ Episodios</p>
+        <p id="icon3">✸ Ver episodios</p>
         <p id="sidebar3Text">
-            <span id="sideBarTitle">✸ Episodios</span>
+            <span id="sideBarTitle">✸ Ver episodios</span>
             <br><br>
             Vasos Comunicantes está compuesto de ocho Episodios. Cada uno de ellos presenta una historia, un relato
             posible entre todas los relatos a narrar a través del arte producido desde el año 1881 hasta
@@ -106,6 +106,7 @@
             y aporte nuevos matices, añadiendo una nueva posibilidad de entender y hacer propia la historia del Reina
             Sofía.
             <br><br>
+            Puedes crear tu episodio seleccionando tres palabras del listado, o visitar otros episodios creados haciendo click aquí.
     </div>
     <main id="main">
         <!-- <article>
@@ -125,6 +126,7 @@
             </div>
         </article> -->
         <div id="wordsWrapper"></div>
+        <h4 id="info">Selecciona tres palabras para crear un nuevo episodio o visita los episodios creados por otras personas haciendo clic <button>aquí</button>.</h4>
         <h4 id="title"></h4>
         <article id="episode" class="episode">
             <span id="start"></span>
