--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
         </article> -->
         <div id="wordsWrapper"></div>
-        <h4 id="info">Selecciona tres palabras para crear un nuevo episodio o visita los episodios creados por otras personas haciendo clic <button>aquí</button>.</h4>
+        <h4 id="info">Selecciona tres palabras para crear un nuevo episodio o visita los episodios creados por otras personas haciendo clic <button class="button">aquí</button>.</h4>
         <h4 id="title"></h4>
         <article id="episode" class="episode">
             <span id="start"></span>
