--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             Esta máquina funciona como herramienta de continuidad de este ejercicio de narrar. A través de su mecanismo,
             cualquiera puede participar de la narrativa de Vasos Comunicantes, añadiendo un Episodio propio que lo
             enriquezca
-            y aporte nuevos matices, añadiendo una nueva posibilidad de entender y hacer propia la historia del Reina
+            y aporte nuevos matices, creando una nueva posibilidad de entender y hacer propia la historia del Reina
             Sofía.
             <br><br>
             Puedes crear tu episodio seleccionando tres palabras del listado, o visitar otros episodios creados haciendo click aquí.
