Update backend integration primaaaa

--- a/client/index.html
+++ b/client/index.html
@@ -123,8 +123,11 @@
                 <span id="textNode2"></span>
                 <span id="textNode3"></span>
                 <span id="end"></span>
+                <button onclick="postEpisode()">crear episodio</button>
+                <button onclick="getEpisodes()">recuperar episodios</button>
             </article>
         </div>
+
     </main>
     <script type="text/javascript" src="./data.js"></script>
     <script type="text/javascript" src="./index.js"></script>
