--- a/client/index.html
+++ b/client/index.html
@@ -107,7 +107,7 @@
             <br><br>
             Puedes crear tu Episodio seleccionando tres palabras del listado, o visitar otros Episodios creados haciendo
             click
-            <button onclick="setEpisodes()" class="button">aquí.</button>
+            <button onclick="getEpisodes()" class="button">aquí.</button>
     </div>
 
     <main id="main">
@@ -124,6 +124,7 @@
             </article>
         </div>
     </main>
+    <script type="text/javascript" src="./services.js"></script>
     <script type="text/javascript" src="./helpers.js"></script>
     <script type="text/javascript" src="./data.js"></script>
     <script type="text/javascript" src="./index.js"></script>
