--- a/client/index.html
+++ b/client/index.html
@@ -120,7 +120,7 @@
             <article id="episode" class="episode">
             </article>
             <article id="episodeslist" class="episodesList">
-                <button onclick="postEpisode()" class="button">Crear episodio</button>
+                <button onclick="postEpisode()" class="button">Guardar episodio</button>
             </article>
         </div>
     </main>
