--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div id="sidebar1" class="sidebar sidebar1" onclick="toggleNav('side1')">
+    <div id="sideModal1" class="sideModal sideModal1" onclick="toggleNav('side1')">
         <p id="icon1">✸ EquipoMotor</p>
-        <p id="sidebar1Text">
+        <p id="sideModal1Text">
             <span id="sideBarTitle">✸ EquipoMotor</span>
             <br /> <br />
             La primera edición de <a href="https://www.museoreinasofia.es/actividades/equipomotor">equipoMotor</a>,
@@ -54,9 +54,9 @@
         </nav>
         </p>
     </div>
-    <div id="sidebar2" class="sidebar sidebar2" onclick="toggleNav('side2')">
+    <div id="sideModal2" class="sideModal sideModal2" onclick="toggleNav('side2')">
         <p id="icon2">✸ Máquina de ficción</p>
-        <p id="sidebar2Text">
+        <p id="sideModal2Text">
             <span id="sideBarTitle">✸ Máquina de ficción</span>
             <br>
             <br>
@@ -88,9 +88,9 @@
             equipoMotor.TXT.
             <br />
     </div>
-    <div id="sidebar3" class="sidebar sidebar3" onclick="toggleNav('side3')">
+    <div id="sideModal3" class="sideModal sideModal3" onclick="toggleNav('side3')">
         <p id="icon3">✸ Episodios</p>
-        <p id="sidebar3Text">
+        <p id="sideModal3Text">
             <span id="sideBarTitle">✸ Episodios</span>
             <br><br>
             La exposición <i>Vasos Comunicantes</i> esta compuesta de ocho Episodios. Cada uno de ellos presenta una
