--- a/client/index.html
+++ b/client/index.html
@@ -10,119 +10,29 @@
 </head>
 
 <body>
-    <div id="sideModal1" class="sideModal sideModal1" onclick="toggleNav('side1')">
-        <p id="icon1">✸ EquipoMotor</p>
-        <p id="sideModal1Text">
-            <span id="sideBarTitle">✸ EquipoMotor</span>
-            <br /> <br />
-            La primera edición de <a href="https://www.museoreinasofia.es/actividades/equipomotor">equipoMotor</a>,
-            equipoMotor.TXT, tuvo
-            lugar entre
-            marzo y junio del año 2022, coordinada por Desmusea y acompañada por Torta Colectivo, Yuri Tuma y Fabiana
-            Vinagre, Sara Martín Terceño, Fran MM Cabeza de Vaca y Laura Ramírez Ashbaugh.
-            <br /> <br />
-            equipoMotor.TXT convocó a las personas que formaron parte de algunas de las Comunidades del Museo Reina
-            Sofía entre los años 2019 y 2022 para recorrer <i> Vasos Comunicantes</i>, la reordenación de la Colección
-            Permanente del museo que se presentó en noviembre de 2021.
-            <br />
-            <br />
-            Inspiradas por la obra <i>TXT</i> de Ana Torfs, viajamos a través de la Colección Permanente para conocerla
-            y preguntarnos: ¿qué ideas o conceptos conectan los diferentes Episodios? ¿Cómo circulan las palabras a
-            través de las obras y los espacios?
-            <br />
-            <br />
-            El programa se articuló a través de 8 sesiones presenciales y la creación de otros tantos boletines
-            digitales, un material de mediación comunitaria que construye un glosario compartido de lectura colectiva.
-            <br />
-            Puedes leer los boletines equipoMOTOR.TXT que funcionan como bitácora y relatoría de las sesiones.
-            <br /> <br />
-        <nav id="links">
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin1" class="link"> #1
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin2" class="link">#2
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin3" class="link"> #3 </a>
-            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4" class="link"> #4 </a>
-            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5" class="link"> #5
-            </a>
-            <a href="https://go.museoreinasofia.es/boletin6" class="link"> #6 </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin7" class="link"> #7
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin8" class="link"> #8
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin9" class="link"> #9 </a>
-        </nav>
-        </p>
-    </div>
-    <div id="sideModal2" class="sideModal sideModal2" onclick="toggleNav('side2')">
-        <p id="icon2">✸ Máquina de ficción</p>
-        <p id="sideModal2Text">
-            <span id="sideBarTitle">✸ Máquina de ficción</span>
-            <br>
-            <br>
-            Esta máquina de ficción se presenta como resultado del trabajo realizado por equipoMotor.TXT durante su
-            primera edición, inspirada por la obra <i>TXT</i> de Ana Torfs.
-            <br>
-            <br>
-            <i>TXT</i> se compone de seis tapices que contienen unas extrañas máquinas de ficción inspiradas por <i>Los
-                Viajes de Gulliver</i> de Jonathan Swift.
-            <br>
-            Cada máquina está acompañada de una palabra: jengibre, azafrán, azúcar, café, tabaco y chocolate; palabras
-            que suponen un tipo especial de préstamo lingüístico presente en varios idiomas y cuyo origen resulta
-            difícil de determinar.
-            <br>
-            Cada tapiz muestra una serie de imágenes que relatan los viajes posibles de estas palabras a través del
-            mundo.
-            <br>
-            <br>
-            Partiendo de distintos ejercicios de mediación por los espacios del museo, equipoMotor.TXT decidió una serie
-            de términos que funcionan como vínculos constantes entre los Episodios de <i>Vasos Comunicantes</i>.
-            Términos que
-            atraviesan las salas, y cuyo significado se transforma o reinterpreta en cada uno de los diferentes
-            contextos políticos, artísticos y sociales que circunscriben sus piezas.
-            <br>
-            <br>
-            Tales palabras son las que activan el mecanismo de esta máquina de ficción de <i>Vasos Comunicantes</i>, que
-            genera
-            un Episodio en torno al museo conectando obras, conceptos y experiencias reales y ficcionadas extraídas de
-            equipoMotor.TXT.
-            <br />
-    </div>
-    <div id="sideModal3" class="sideModal sideModal3" onclick="toggleNav('side3')">
-        <p id="icon3">✸ Episodios</p>
-        <p id="sideModal3Text">
-            <span id="sideBarTitle">✸ Episodios</span>
-            <br><br>
-            La exposición <i>Vasos Comunicantes</i> esta compuesta de ocho Episodios. Cada uno de ellos presenta una
-            historia, un relato
-            posible entre todas los relatos a narrar a través del arte producido desde el año 1881 hasta
-            nuestros días.
-            <br><br>
-            Esta máquina funciona como herramienta de continuidad de este ejercicio de narrar. A través de su mecanismo,
-            cualquiera puede participar de la narrativa de <i>Vasos Comunicantes</i>, añadiendo un Episodio propio que
-            lo
-            enriquezca
-            y aporte nuevos matices, creando una nueva posibilidad de entender y hacer propia la historia del Reina
-            Sofía.
-            <br><br>
-            Puedes crear tu Episodio seleccionando tres palabras del listado, o visitar otros Episodios creados haciendo
-            click
-            <button onclick="getEpisodes()" class="button">aquí.</button>
-    </div>
-
-    <main id="main">
-        <h4 id="info">Selecciona tres palabras para crear un nuevo <button class="button"
-                onclick="toggleNav('side3')">Episodio</button> o visita los Episodios creados por otras
-            personas haciendo clic <button class="button" onclick="getEpisodes()">aquí</button>.</h4>
-        <div id="wordsWrapper"></div>
-        <div>
-            <h4 id="title"></h4>
-            <article id="episode" class="episode">
-            </article>
-            <article id="episodeslist" class="episodesList">
-                <button onclick="postEpisode()" class="button">Guardar episodio</button>
-            </article>
-        </div>
+    <nav class="menu">
+        <h1>equipoMotor. TXT — máquina de ficción</h1>
+        <button class="menu--item">
+            <h2 class="menu--item__label">→ qué es un episodio</h2>
+        </button>
+        <button class="menu--item">
+            <h2 class="menu--item__label">→ cómo crear un episodio</h2>
+        </button>
+        <button class="menu--item" onclick="getEpisodes()">
+            <h2 class="menu--item__label">→ ver episodios creados</h2>
+        </button>
+    </nav>
+    <main class="main">
+        <ul id="wordsWrapper"></ul>
+        <article class="rightSide">
+            <div id="episodeWrapper">
+                <h4 id="title" class="episode__title"></h4>
+                <p id="episode" class="episode">
+                </p>
+                <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden">guardar episodio</button>
+            </div>
+            <ul id="episodesList"></ul>
+        </article>
     </main>
     <script type="text/javascript" src="./services.js"></script>
     <script type="text/javascript" src="./helpers.js"></script>
