--- a/client/index.html
+++ b/client/index.html
@@ -5,23 +5,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>equipomotor</title>
+    <title>equipoMotor. TXT — máquina de ficción</title>
     <link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 
 <body>
-    <nav class="menu">
-        <h1>equipoMotor. TXT — máquina de ficción</h1>
-        <button class="menu--item">
-            <h2 class="menu--item__label">→ qué es un episodio</h2>
-        </button>
-        <button class="menu--item">
-            <h2 class="menu--item__label">→ cómo crear un episodio</h2>
-        </button>
-        <button class="menu--item" onclick="getEpisodes()">
-            <h2 class="menu--item__label">→ ver episodios creados</h2>
-        </button>
-    </nav>
+    <header>
+        <nav class="menu">
+            <h1>equipoMotor. TXT — máquina de ficción</h1>
+            <ul class="menu--list">
+                <li>
+                    <button class="menu--list__item" onclick="displayInfo('#aboutEquipoMotor')">
+                        <h2 class="menu--list__item-label">→ qué fue equipoMotor TXT 2020</h2>
+                    </button>
+                </li>
+                <li>
+                    <button class="menu--list__item" onclick="displayInfo('#aboutEpisodes')">
+                        <h2 class="menu--list__item-label">→ qué son los episodios</h2>
+                    </button>
+                </li>
+                <li>
+                    <button class="menu--list__item" onclick="displayInfo('#aboutCreatingEpisodes')">
+                        <h2 class="menu--list__item-label">→ cómo crear un episodio</h2>
+                    </button>
+                </li>
+                <li>
+                    <button class="menu--list__item" onclick="getEpisodes()">
+                        <h2 class="menu--list__item-label">→ ver episodios creados</h2>
+                    </button>
+                </li>
+            </ul>
+        </nav>
+        <p class="about hidden" id="aboutEquipoMotor">
+            La primera edición de <a href="https://www.museoreinasofia.es/actividades/equipomotor">equipoMotor</a>,
+            equipoMotor.TXT, tuvo
+            lugar entre
+            marzo y junio del año 2022, coordinada por Desmusea y acompañada por Torta Colectivo, Yuri Tuma y Fabiana
+            Vinagre, Sara Martín Terceño, Fran MM Cabeza de Vaca y Laura Ramírez Ashbaugh.
+            <br /> <br />
+            equipoMotor.TXT convocó a las personas que formaron parte de algunas de las Comunidades del Museo Reina
+            Sofía entre los años 2019 y 2022 para recorrer <i> Vasos Comunicantes</i>, la reordenación de la Colección
+            Permanente del museo que se presentó en noviembre de 2021.
+            <br />
+            <br />
+            Inspiradas por la obra <i>TXT</i> de Ana Torfs, viajamos a través de la Colección Permanente para conocerla
+            y preguntarnos: ¿qué ideas o conceptos conectan los diferentes Episodios? ¿Cómo circulan las palabras a
+            través de las obras y los espacios?
+            <br />
+            <br />
+            El programa se articuló a través de 8 sesiones presenciales y la creación de otros tantos boletines
+            digitales, un material de mediación comunitaria que construye un glosario compartido de lectura colectiva.
+            <br>
+            <br>
+            El glosario se presenta aquí como detonante para activar el mecanismo de esta máquina de ficción de <i>Vasos
+                Comunicantes</i>, que
+            genera
+            un Episodio en torno al museo conectando obras, conceptos y experiencias reales y ficcionadas extraídas de
+            equipoMotor.TXT.
+            <br />
+            <br />
+            Puedes visitar los boletines equipoMOTOR.TXT que funcionan como bitácora y relatoría de las sesiones aquí:
+        <ul id="links">
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin1" class="link"> Boletín #1
+            </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin2" class="link">Boletín #2
+            </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin3" class="link"> Boletín #3 </a>
+            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4" class="link"> Boletín #4 </a>
+            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5" class="link"> Boletín #5
+            </a>
+            <a href="https://go.museoreinasofia.es/boletin6" class="link"> Boletín #6 </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin7" class="link"> Boletín #7
+            </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin8" class="link"> Boletín #8
+            </a>
+            <a href="https://go.museoreinasofia.es/equipomotor-boletin9" class="link"> Boletín #9 </a>
+        </ul>
+        <br /> <br />
+        </p>
+        <p class="about hidden" id="aboutEpisodes">
+            La exposición <i>Vasos Comunicantes</i> esta compuesta de ocho Episodios. Cada uno de ellos presenta una
+            historia, un relato
+            posible entre todas los relatos a narrar a través del arte producido desde el año 1881 hasta
+            nuestros días.
+            <br><br>
+            Esta máquina funciona como herramienta de continuidad de este ejercicio de narrar. A través de su mecanismo,
+            cualquiera puede participar de la narrativa de <i>Vasos Comunicantes</i>, añadiendo un Episodio propio que
+            lo
+            enriquezca
+            y aporte nuevos matices, creando una nueva posibilidad de entender y hacer propia la historia del Reina
+            Sofía.
+        </p>
+        <p class="about hidden" id="aboutCreatingEpisodes">
+            1. Selecciona tres palabras del listado
+            <br>
+            2. Haz clic en el botón 'Guardar episodio'
+            <br>
+            3. ¡Listo!
+            <br><br>
+        </p>
+    </header>
     <main class="main">
         <ul id="wordsWrapper"></ul>
         <article class="rightSide">
