--- a/client/index.html
+++ b/client/index.html
@@ -114,7 +114,7 @@
                 </p>
                 <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden">guardar episodio</button>
             </div>
-            <ul id="episodesList"></ul>
+            <ul id="episodesList" class="hidden"></ul>
         </article>
     </main>
     <script type="text/javascript" src="./services.js"></script>
