--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="menu">
             <h1>equipoMotor. TXT — máquina de ficción</h1>
             <ul class="menu--list">
@@ -36,81 +36,92 @@
                 </li>
             </ul>
         </nav>
-        <p class="about hidden" id="aboutEquipoMotor">
-            La primera edición de <a href="https://www.museoreinasofia.es/actividades/equipomotor">equipoMotor</a>,
-            equipoMotor.TXT, tuvo
-            lugar entre
-            marzo y junio del año 2022, coordinada por Desmusea y acompañada por Torta Colectivo, Yuri Tuma y Fabiana
-            Vinagre, Sara Martín Terceño, Fran MM Cabeza de Vaca y Laura Ramírez Ashbaugh.
-            <br /> <br />
-            equipoMotor.TXT convocó a las personas que formaron parte de algunas de las Comunidades del Museo Reina
-            Sofía entre los años 2019 y 2022 para recorrer <i> Vasos Comunicantes</i>, la reordenación de la Colección
-            Permanente del museo que se presentó en noviembre de 2021.
-            <br />
-            <br />
-            Inspiradas por la obra <i>TXT</i> de Ana Torfs, viajamos a través de la Colección Permanente para conocerla
-            y preguntarnos: ¿qué ideas o conceptos conectan los diferentes Episodios? ¿Cómo circulan las palabras a
-            través de las obras y los espacios?
-            <br />
-            <br />
-            El programa se articuló a través de 8 sesiones presenciales y la creación de otros tantos boletines
-            digitales, un material de mediación comunitaria que construye un glosario compartido de lectura colectiva.
-            <br>
-            <br>
-            El glosario se presenta aquí como detonante para activar el mecanismo de esta máquina de ficción de <i>Vasos
-                Comunicantes</i>, que
-            genera
-            un Episodio en torno al museo conectando obras, conceptos y experiencias reales y ficcionadas extraídas de
-            equipoMotor.TXT.
-            <br />
-            <br />
-            Puedes visitar los boletines equipoMOTOR.TXT que funcionan como bitácora y relatoría de las sesiones aquí:
-        <ul id="links">
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin1" class="link"> Boletín #1
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin2" class="link">Boletín #2
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin3" class="link"> Boletín #3 </a>
-            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4" class="link"> Boletín #4 </a>
-            <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5" class="link"> Boletín #5
-            </a>
-            <a href="https://go.museoreinasofia.es/boletin6" class="link"> Boletín #6 </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin7" class="link"> Boletín #7
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin8" class="link"> Boletín #8
-            </a>
-            <a href="https://go.museoreinasofia.es/equipomotor-boletin9" class="link"> Boletín #9 </a>
-        </ul>
-        </p>
-        <p class="about hidden" id="aboutEpisodes">
-            La exposición <i>Vasos Comunicantes</i> esta compuesta de ocho Episodios. Cada uno de ellos presenta una
-            historia, un relato
-            posible entre todas los relatos a narrar a través del arte producido desde el año 1881 hasta
-            nuestros días.
-            <br><br>
-            Esta máquina funciona como herramienta de continuidad de este ejercicio de narrar. A través de su mecanismo,
-            cualquiera puede participar de la narrativa de <i>Vasos Comunicantes</i>, añadiendo un Episodio propio que
-            lo
-            enriquezca
-            y aporte nuevos matices, creando una nueva posibilidad de entender y hacer propia la historia del Reina
-            Sofía.
-        </p>
-        <p class="about hidden" id="aboutCreatingEpisodes">
-            1. Selecciona tres palabras del listado
-            <br>
-            2. Haz clic en el botón 'Guardar episodio'
-            <br>
-            3. ¡Listo!
-        </p>
+        <article class="about" >
+            <p class="about__text hidden" id="aboutEquipoMotor">
+                La primera edición de <a href="https://www.museoreinasofia.es/actividades/equipomotor">equipoMotor</a>,
+                equipoMotor.TXT, tuvo
+                lugar entre
+                marzo y junio del año 2022, coordinada por Desmusea y acompañada por Torta Colectivo, Yuri Tuma y
+                Fabiana
+                Vinagre, Sara Martín Terceño, Fran MM Cabeza de Vaca y Laura Ramírez Ashbaugh.
+                <br /> <br />
+                equipoMotor.TXT convocó a las personas que formaron parte de algunas de las Comunidades del Museo Reina
+                Sofía entre los años 2019 y 2022 para recorrer <i> Vasos Comunicantes</i>, la reordenación de la
+                Colección
+                Permanente del museo que se presentó en noviembre de 2021.
+                <br />
+                <br />
+                Inspiradas por la obra <i>TXT</i> de Ana Torfs, viajamos a través de la Colección Permanente para
+                conocerla
+                y preguntarnos: ¿qué ideas o conceptos conectan los diferentes Episodios? ¿Cómo circulan las palabras a
+                través de las obras y los espacios?
+                <br />
+                <br />
+                El programa se articuló a través de 8 sesiones presenciales y la creación de otros tantos boletines
+                digitales, un material de mediación comunitaria que construye un glosario compartido de lectura
+                colectiva.
+                <br>
+                <br>
+                El glosario se presenta aquí como detonante para activar el mecanismo de esta máquina de ficción de
+                <i>Vasos
+                    Comunicantes</i>, que
+                genera
+                un Episodio en torno al museo conectando obras, conceptos y experiencias reales y ficcionadas extraídas
+                de
+                equipoMotor.TXT.
+                <br />
+                <br />
+                Puedes visitar los boletines equipoMOTOR.TXT que funcionan como bitácora y relatoría de las sesiones
+                aquí:
+            <ul id="links">
+                <a href="https://go.museoreinasofia.es/equipomotor-boletin1" class="link"> Boletín #1
+                </a>
+                <a href="https://go.museoreinasofia.es/equipomotor-boletin2" class="link">Boletín #2
+                </a>
+                <a href="https://go.museoreinasofia.es/equipomotor-boletin3" class="link"> Boletín #3 </a>
+                <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4" class="link"> Boletín #4 </a>
+                <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5" class="link"> Boletín #5
+                </a>
+                <a href="https://go.museoreinasofia.es/boletin6" class="link"> Boletín #6 </a>
+                <a href="https://go.museoreinasofia.es/equipomotor-boletin7" class="link"> Boletín #7
+                </a>
+                <a href="https://go.museoreinasofia.es/equipomotor-boletin8" class="link"> Boletín #8
+                </a>
+                <a href="https://go.museoreinasofia.es/equipomotor-boletin9" class="link"> Boletín #9 </a>
+            </ul>
+            </p>
+            <p class="about__text hidden" id="aboutEpisodes">
+                La exposición <i>Vasos Comunicantes</i> esta compuesta de ocho Episodios. Cada uno de ellos presenta una
+                historia, un relato
+                posible entre todas los relatos a narrar a través del arte producido desde el año 1881 hasta
+                nuestros días.
+                <br><br>
+                Esta máquina funciona como herramienta de continuidad de este ejercicio de narrar. A través de su
+                mecanismo,
+                cualquiera puede participar de la narrativa de <i>Vasos Comunicantes</i>, añadiendo un Episodio propio
+                que
+                lo
+                enriquezca
+                y aporte nuevos matices, creando una nueva posibilidad de entender y hacer propia la historia del Reina
+                Sofía.
+            </p>
+            <p class="about__text hidden" id="aboutCreatingEpisodes">
+                1. Selecciona tres palabras del listado
+                <br>
+                2. Haz clic en el botón 'Guardar episodio'
+                <br>
+                3. ¡Listo!
+            </p>
+        </article>
     </header>
-    <main class="main">
+    <main class="main" onclick="hideInfo()">
         <ul id="wordsWrapper"></ul>
         <article class="rightSide">
             <div id="episodeWrapper">
                 <h4 id="title" class="episode__title"></h4>
                 <p id="episode" class="episode">
                 </p>
-                <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden">guardar episodio</button>
+                <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden saveButton">Guardar episodio</button>
             </div>
             <ul id="episodesList" class="hidden"></ul>
         </article>
