--- a/client/index.html
+++ b/client/index.html
@@ -71,24 +71,20 @@
                 equipoMotor.TXT.
                 <br />
                 <br />
-                Puedes visitar los boletines equipoMOTOR.TXT que funcionan como bitácora y relatoría de las sesiones
+                Puedes visitar los boletines equipoMotor.TXT que funcionan como bitácora y relatoría de las sesiones
                 aquí:
-            <ul id="links">
-                <a href="https://go.museoreinasofia.es/equipomotor-boletin1" class="link"> Boletín #1
-                </a>
-                <a href="https://go.museoreinasofia.es/equipomotor-boletin2" class="link">Boletín #2
-                </a>
-                <a href="https://go.museoreinasofia.es/equipomotor-boletin3" class="link"> Boletín #3 </a>
-                <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4" class="link"> Boletín #4 </a>
-                <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5" class="link"> Boletín #5
-                </a>
-                <a href="https://go.museoreinasofia.es/boletin6" class="link"> Boletín #6 </a>
-                <a href="https://go.museoreinasofia.es/equipomotor-boletin7" class="link"> Boletín #7
-                </a>
-                <a href="https://go.museoreinasofia.es/equipomotor-boletin8" class="link"> Boletín #8
-                </a>
-                <a href="https://go.museoreinasofia.es/equipomotor-boletin9" class="link"> Boletín #9 </a>
-            </ul>
+                <span id="links" class="links">
+                    <a href="https://go.museoreinasofia.es/equipomotor-boletin1" class="links__item">#1
+                    </a>
+                    <a href="https://go.museoreinasofia.es/equipomotor-boletin2" class="links__item">#2</a>
+                    <a href="https://go.museoreinasofia.es/equipomotor-boletin3" class="links__item">#3</a>
+                    <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin4" class="links__item">#4</a>
+                    <a href="https://go.museoreinasofia.es/equipoMOTOR-boletin5" class="links__item">#5</a>
+                    <a href="https://go.museoreinasofia.es/boletin6" class="links__item">#6</a>
+                    <a href="https://go.museoreinasofia.es/equipomotor-boletin7" class="links__item">#7</a>
+                    <a href="https://go.museoreinasofia.es/equipomotor-boletin8" class="links__item">#8</a>
+                    <a href="https://go.museoreinasofia.es/equipomotor-boletin9" class="links__item">#9</a>
+                </span>
             </p>
             <p class="about__text hidden" id="aboutEpisodes">
                 La exposición <i>Vasos Comunicantes</i> esta compuesta de ocho Episodios. Cada uno de ellos presenta una
