--- a/client/index.html
+++ b/client/index.html
@@ -104,7 +104,7 @@
             <p class="about__text hidden" id="aboutCreatingEpisodes">
                 1. Selecciona tres palabras del listado
                 <br>
-                2. Haz clic en el botón 'Guardar episodio'
+                2. Haz clic en el botón '→ Guardar episodio'
                 <br>
                 3. ¡Listo!
             </p>
@@ -117,7 +117,7 @@
                 <h4 id="title" class="episode__title"></h4>
                 <p id="episode" class="episode">
                 </p>
-                <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden saveButton">Guardar
+                <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden saveButton">→ guardar
                     episodio</button>
             </div>
             <ul id="episodesList" class="hidden"></ul>
