--- a/client/index.html
+++ b/client/index.html
@@ -120,7 +120,7 @@
                 <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden saveButton">→ guardar
                     episodio</button>
             </div>
-            <ul id="episodesList" class="hidden"></ul>
+            <ul id="episodesList" class="hidden episodesList"></ul>
         </article>
     </main>
     <script type="text/javascript" src="./services.js"></script>
