--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
                 <h4 id="title" class="episode__title"></h4>
                 <p id="episode" class="episode">
                 </p>
-                <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden saveButton">→ Guardar
+                <button id="saveEpisodeButton" onclick="postEpisode()" class="hidden saveButton">→ guardar
                     episodio</button>
             </div>
             <ul id="episodesList" class="hidden episodesList">
