--- a/client/index.html
+++ b/client/index.html
@@ -38,8 +38,8 @@
         </nav>
     </header>
     <main class="main">
-        <ul id="wordsWrapper" onclick="hideInfo()"></ul>
-        <article class="rightSide" onclick="hideInfo()">
+        <ul id="wordsWrapper" onclick="unselectMenuItems()"></ul>
+        <article class="rightSide" onclick="unselectMenuItems()">
             <div id="episodeWrapper">
                 <div class="hidden" id="loader"></div>
                 <div class="hidden" id="successMessage">Tu episodio ya es parte del archivo de la Máquina de ficción de
