--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div id="popup" class="popup-overlay">
+        <div class="popup-content">
+            hola esto es el popup
+            <button class="popup-button" onclick="closePopup()">x</button>
+        </div>
+    </div>
     <header class="header">
         <nav class="menu">
             <h1>equipoMotor. TXT — máquina de ficción</h1>
