--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
                 <button class="popup-button" onclick="closePopup()">x</button>
             </div>
             <div class="popup-content">
-                <img class="popup-image" src="img/txt-gif.gif" />
+                <img class="popup-image" src="img/words-selection.gif" />
                 <div class="popup-text">
                     Esta web es una máquina de ficción inspirada en los tapices de la obra <a
                         href="https://www.museoreinasofia.es/coleccion/obra/txt-engine-wandering-words-txt-motor-palabras-errantes"
